--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "babel-loader": "^7.1.1",
         "babel-preset-env": "^1.5.2",
         "css-loader": "^0.28.4",
+        "mobile-detect": "^1.3.6",
         "style-loader": "^0.18.2",
         "svg-inline-loader": "^0.7.1",
         "webpack": "^3.0.0"
