--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "author": "Teng-hao Chang <zhusee2@gmail.com>",
     "license": "UNLICENSED",
     "scripts": {
-        "dist": "webpack"
+        "build": "webpack",
+        "dist": "sh ./ghpages.sh"
     },
     "dependencies": {
         "babel-core": "^6.25.0",
